Fix tooltip flickering (SCRD-6923)
- Fix server auto discover tooltips on the bottom row

--- a/src/styles/pages/AssignServerRoles.less
+++ b/src/styles/pages/AssignServerRoles.less
@@ -105,7 +105,6 @@
     .tab-pane {
       margin-top: 0.5em;
       max-height: 36em;
-      overflow: auto;
     }
     &.server-dropzone{
       margin: 2px;
